--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>7</source>
-                    <target>7</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-    <packaging>jar</packaging>
+    <modules>
+        <module>ailyun-oss</module>
+    </modules>
+    <packaging>pom</packaging>
 
   <name>java_rgw</name>
   <url>http://maven.apache.org</url>
